pk: Fix installed filtering

We were giving all of them and the proxy isn't smart enough to do the
filtering.

BUG: 428681


(cherry picked from commit c1224ba80c434d4dc6e582f146be728c47125370)